# GeoMaster

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  setup.py
era3d_render/: render.py  render_multiprocess.py
era3d_render/utils/: func.py
examples/: .gitattributes  glt.ply
geomaster/: mesh_pipeline.py  pipeline.py
geomaster/models/: mesh.py
geomaster/scripts/: detect_reflection.py  encode_mesh.py  norm2mesh.py  prepare_data.py  process_mesh.py  process_mesh_cpu.py  process_npz.py  render_mesh.py  render_meshes.py
geomaster/systems/: mesh_pipeline.py  mesh_utils.py  ncc_utils.py  sap_pipeline.py  tsdf_fusion_pipeline.py
geomaster/utils/: camera_utils.py  depth_utils.py  func.py  mesh_utils.py  occupancy_utils.py  render.py
geomaster/utils/libmesh/: triangle_hash.cpp
